[D-Bus] Replace QtSingleApplication with QtDBus

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -6,6 +6,7 @@
     <file>images/config.png</file>
     <file>images/iconify.png</file>
     <file>images/kdocker.png</file>
+    <file>images/mouse.png</file>
     <file>images/options.png</file>
     <file>images/question.png</file>
     <file>images/restore.png</file>
